tests/files/type_checker_tests/should_pass/044.cmdr
//Test array expression type checks
x = 1;
y = (2.0, true, 3)[x];
z = [y, 3, 4];
