tests/files/type_checker_tests/should_fail/085.cmdr
//Should fail if array contains multiple types
x = [];
x.append(2.3);
x.append(1);
